# poll

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  api.Dockerfile  autovoter.js  config.json  docker-compose.yml  generate_nginx_config.py  install.sh  package-lock.json  package.json  poller.service  site.conf  start.sh  web.Dockerfile  webpack.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
old-src/: index.js  server.js
old-src/db/: index.js
old-src/middleware/: loadSourceIP.js
old-src/models/: IPVoted.js  Poll.js  RateLimiter.js
public/: index.html
src/: index.js  lib.rs  main.rs  server.js
src/functions/: mod.rs  recaptcha.rs  verifyCaptcha.js
src/models/: RateLimiter.js  config.rs  mod.rs  poll.rs  state.rs  view.rs  voter.rs
src/routes/: alive.rs  create_poll.rs  get_poll.rs  get_poll_options.rs  mod.rs  poll.js  polls.rs  static_routes.rs  vote.js  vote_poll.rs
src/web/: app.jsx  index.jsx
src/web/components/: CreatePollForm.jsx  ViewPollOption.jsx  ViewPollPie.jsx  VotePollForm.jsx  index.jsx
src/web/pages/: CreatePoll.jsx  Homepage.jsx  ViewPoll.jsx  VotePoll.jsx  index.jsx
src/web/utilities/: request.jsx
web/: app.jsx
web/components/: CreatePollForm.jsx  ViewPollOption.jsx
web/pages/: CreatePoll.jsx  Homepage.jsx
web/styles/: main.css
web/utilities/: request.jsx
