[package]
name = "poll"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.7.5", features = ["macros", "tokio"] }
clap = { version = "4.5.32", features = ["derive", "env"] }
nanoid = "0.4.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
